--- a/portfolio.html
+++ b/portfolio.html
@@ -11,159 +11,185 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <a lang="en" href="./index.html" class="logo first"
-          ><span class="logo">Web</span>Studio</a
-        >
-      </div>
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студіо</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="contacts list">
-        <li>
-          <a lang="en" href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+    <header class="header">
+      <div class="container">
+        <div>
+          <a lang="en" href="./index.html" class="logo first"
+            ><span class="logo">Web</span>Studio</a
           >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-
-    <main>
-      <section>
-        <h1 class="visually-hidden">Перелік послуг</h1>
-        <ul class="list">
-          <li><button class="button pointer" type="button">Усі</button></li>
+        </div>
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студіо</a></li>
+            <li>
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            </li>
+            <li><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
           <li>
-            <button class="button pointer" type="button">Веб-сайти</button>
-          </li>
-          <li><button class="button pointer" type="button">Додатки</button></li>
-          <li><button class="button pointer" type="button">Дизайн</button></li>
-          <li>
-            <button class="button pointer" type="button">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul class="list">
-          <li>
-            <a class="services" href="#">
-              <img
-                src="./images/staff-cards.jpg"
-                alt="Картки персоналу"
-                width="370"
-              />
-              <h2 class="list-title">Технокряк</h2>
-              <p class="work-types">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/basketball.jpg" alt="Баскетбол" width="370" />
-              <h2 class="list-title">
-                Постер<span lang="en"></span> New Orlean vs Golden Star
-              </h2>
-              <p class="work-types">Дизайн</p>
-            </a>
-          </li>
-
-          <li>
-            <a class="services" href="#">
-              <img src="./images/seafood.jpg" alt="Риба" width="370" />
-              <h2 class="list-title">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/headphones.jpg" alt="Навушники" width="370" />
-              <h2 class="list-title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="work-types">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/boxes.jpg" alt="Коробки" width="370" />
-              <h2 class="list-title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="work-types">Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/monitor.jpg" alt="Монитор" width="370" />
-              <h2 class="list-title" lang="en">Inspiration has no Borders</h2>
-              <p class="work-types">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/magazine.jpg" alt="Журнал" width="370" />
-              <h2 class="list-title">
-                Видання <span lang="en">Limited Edition has no Borders</span>
-              </h2>
-              <p class="work-types">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/label.jpg" alt="Бирка" width="370" />
-              <h2 class="list-title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="work-types">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a class="services" href="#">
-              <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
-              <h2 class="list-title" lang="en">Growing Business</h2>
-              <p class="work-types">Додаток</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="basement">
-      <div>
-        <a lang="en" href="./index.html" class="logo second"
-          ><span class="logo">Web</span>Studio</a
-        >
-      </div>
-
-      <address>
-        <ul class="basement list">
-          <li>
-            <a
-              class="map link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="contacts-basement link"
-              lang="en"
-              href="mailto:info@devstudio.com"
+            <a lang="en" href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts-basement link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Перелік послуг</h1>
+          <ul class="list">
+            <li><button class="button pointer" type="button">Усі</button></li>
+            <li>
+              <button class="button pointer" type="button">Веб-сайти</button>
+            </li>
+            <li>
+              <button class="button pointer" type="button">Додатки</button>
+            </li>
+            <li>
+              <button class="button pointer" type="button">Дизайн</button>
+            </li>
+            <li>
+              <button class="button pointer" type="button">Маркетинг</button>
+            </li>
+          </ul>
+
+          <ul class="list">
+            <li>
+              <a class="services" href="#">
+                <img
+                  src="./images/staff-cards.jpg"
+                  alt="Картки персоналу"
+                  width="370"
+                />
+                <h2 class="list-title">Технокряк</h2>
+                <p class="work-types">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img
+                  src="./images/basketball.jpg"
+                  alt="Баскетбол"
+                  width="370"
+                />
+                <h2 class="list-title">
+                  Постер<span lang="en"></span> New Orlean vs Golden Star
+                </h2>
+                <p class="work-types">Дизайн</p>
+              </a>
+            </li>
+
+            <li>
+              <a class="services" href="#">
+                <img src="./images/seafood.jpg" alt="Риба" width="370" />
+                <h2 class="list-title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img
+                  src="./images/headphones.jpg"
+                  alt="Навушники"
+                  width="370"
+                />
+                <h2 class="list-title">Проєкт <span lang="en">Prime</span></h2>
+                <p class="work-types">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img src="./images/boxes.jpg" alt="Коробки" width="370" />
+                <h2 class="list-title">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="work-types">Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img src="./images/monitor.jpg" alt="Монитор" width="370" />
+                <h2 class="list-title" lang="en">Inspiration has no Borders</h2>
+                <p class="work-types">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img src="./images/magazine.jpg" alt="Журнал" width="370" />
+                <h2 class="list-title">
+                  Видання <span lang="en">Limited Edition has no Borders</span>
+                </h2>
+                <p class="work-types">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img src="./images/label.jpg" alt="Бирка" width="370" />
+                <h2 class="list-title">Проєкт <span lang="en">LAB</span></h2>
+                <p class="work-types">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a class="services" href="#">
+                <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
+                <h2 class="list-title" lang="en">Growing Business</h2>
+                <p class="work-types">Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="basement">
+      <div class="container">
+        <div>
+          <a lang="en" href="./index.html" class="logo second"
+            ><span class="logo">Web</span>Studio</a
+          >
+        </div>
+
+        <address>
+          <ul class="basement list">
+            <li>
+              <a
+                class="map link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a
+                class="contacts-basement link"
+                lang="en"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-basement link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
