--- a/index.html
+++ b/index.html
@@ -11,159 +11,177 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <a lang="en" href="./index.html" class="logo first"
-          ><span class="logo">Web</span>Studio</a
-        >
-      </div>
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студіо</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="contacts list">
-        <li>
-          <a lang="en" href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+    <header class="header">
+      <div class="container">
+        <div>
+          <a lang="en" href="./index.html" class="logo first"
+            ><span class="logo">Web</span>Studio</a
           >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="button-hero pointer" type="button">
-          Замовити послугу
-        </button>
-      </section>
-      <section class="section">
-        <h2 class="section-title visually-hidden">Наші переваги</h2>
-        <ul class="benefits-list list">
+        </div>
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студіо</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
           <li>
-            <h3 class="title">Увага до деталей</h3>
-            <p class="description">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальність</h3>
-            <p class="description">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планування</h3>
-            <p class="description">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Сучаснітехнології</h3>
-            <p class="description">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/display-keyboard.jpg"
-              alt="Набір тексту на клавіатурі"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/smart-interface.jpg"
-              alt="Смартфон"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/color-table.jpg"
-              alt="Таблиця кольорів"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="section staff">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="staff-list list">
-          <li>
-            <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="name">Ігор Дем'яненко</h3>
-            <p class="profession" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="name">Ольга Рєпіна</h3>
-            <p class="profession" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="name">Микола Тарасов</h3>
-            <p class="profession" lang="en">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/mykhaylo.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-            />
-            <h3 class="name">Михайло Єрмаков</h3>
-            <p class="profession" lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="basement">
-      <div>
-        <a lang="en" href="./index.html" class="logo second"
-          ><span class="logo">Web</span>Studio</a
-        >
-      </div>
-
-      <address>
-        <ul class="basement list">
-          <li>
-            <a
-              class="map link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="contacts-basement link"
-              lang="en"
-              href="mailto:info@devstudio.com"
+            <a lang="en" href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts-basement link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="button-hero pointer" type="button">
+            Замовити послугу
+          </button>
+        </div>
+      </section>
+      <section class="section benefits">
+        <div class="container">
+          <h2 class="section-title visually-hidden">Наші переваги</h2>
+          <ul class="benefits-list list">
+            <li>
+              <h3 class="title">Увага до деталей</h3>
+              <p class="description">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Пунктуальність</h3>
+              <p class="description">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Планування</h3>
+              <p class="description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Сучаснітехнології</h3>
+              <p class="description">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/display-keyboard.jpg"
+                alt="Набір тексту на клавіатурі"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/smart-interface.jpg"
+                alt="Смартфон"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/color-table.jpg"
+                alt="Таблиця кольорів"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section staff">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="staff-list list">
+            <li>
+              <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
+              <h3 class="name">Ігор Дем'яненко</h3>
+              <p class="profession" lang="en">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270" />
+              <h3 class="name">Ольга Рєпіна</h3>
+              <p class="profession" lang="en">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" />
+              <h3 class="name">Микола Тарасов</h3>
+              <p class="profession" lang="en">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/mykhaylo.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+              />
+              <h3 class="name">Михайло Єрмаков</h3>
+              <p class="profession" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="basement">
+      <div class="container">
+        <div>
+          <a lang="en" href="./index.html" class="logo second"
+            ><span class="logo">Web</span>Studio</a
+          >
+        </div>
+
+        <address>
+          <ul class="basement list">
+            <li>
+              <a
+                class="map link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a
+                class="contacts-basement link"
+                lang="en"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-basement link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
