--- a/index.html
+++ b/index.html
@@ -120,22 +120,39 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="staff-list list">
             <li>
-              <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
+              <img
+                class="photo"
+                src="./images/igor.jpg"
+                alt="Ігор Дем'яненко"
+                width="270"
+              />
               <h3 class="name">Ігор Дем'яненко</h3>
               <p class="profession" lang="en">Product Designer</p>
             </li>
             <li>
-              <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270" />
+              <img
+                class="photo"
+                class="photo"
+                src="./images/olha.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+              />
               <h3 class="name">Ольга Рєпіна</h3>
               <p class="profession" lang="en">Frontend Developer</p>
             </li>
             <li>
-              <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" />
+              <img
+                class="photo"
+                src="./images/mykola.jpg"
+                alt="Микола Тарасов"
+                width="270"
+              />
               <h3 class="name">Микола Тарасов</h3>
               <p class="profession" lang="en">Marketing</p>
             </li>
             <li>
               <img
+                class="photo"
                 src="./images/mykhaylo.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
