--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,9 @@
         <div class="container">
           <h1 class="visually-hidden">Перелік послуг</h1>
           <ul class="list">
-            <li><button class="button pointer" type="button">Усі</button></li>
+            <li>
+              <button class="button-all pointer" type="button">Усі</button>
+            </li>
             <li>
               <button class="button pointer" type="button">Веб-сайти</button>
             </li>
@@ -69,86 +71,144 @@
 
           <ul class="list">
             <li>
-              <a class="services" href="#">
-                <img
-                  src="./images/staff-cards.jpg"
-                  alt="Картки персоналу"
-                  width="370"
-                />
-                <h2 class="list-title">Технокряк</h2>
-                <p class="work-types">Веб-сайт</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/staff-cards.jpg"
+                    alt="Картки персоналу"
+                    width="370"
+                  />
+                  <h2 class="list-title">Технокряк</h2>
+                  <p class="work-types">Веб-сайт</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img
-                  src="./images/basketball.jpg"
-                  alt="Баскетбол"
-                  width="370"
-                />
-                <h2 class="list-title">
-                  Постер<span lang="en"></span> New Orlean vs Golden Star
-                </h2>
-                <p class="work-types">Дизайн</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/basketball.jpg"
+                    alt="Баскетбол"
+                    width="370"
+                  />
+                  <h2 class="list-title">
+                    Постер<span lang="en"></span> New Orlean vs Golden Star
+                  </h2>
+                  <p class="work-types">Дизайн</p>
+                </a>
+              </div>
             </li>
 
             <li>
-              <a class="services" href="#">
-                <img src="./images/seafood.jpg" alt="Риба" width="370" />
-                <h2 class="list-title">
-                  Ресторан <span lang="en">Seafood</span>
-                </h2>
-                <p>Додаток</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/seafood.jpg"
+                    alt="Риба"
+                    width="370"
+                  />
+                  <h2 class="list-title">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="work-types">Додаток</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img
-                  src="./images/headphones.jpg"
-                  alt="Навушники"
-                  width="370"
-                />
-                <h2 class="list-title">Проєкт <span lang="en">Prime</span></h2>
-                <p class="work-types">Маркетинг</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/headphones.jpg"
+                    alt="Навушники"
+                    width="370"
+                  />
+                  <h2 class="list-title">
+                    Проєкт <span lang="en">Prime</span>
+                  </h2>
+                  <p class="work-types">Маркетинг</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img src="./images/boxes.jpg" alt="Коробки" width="370" />
-                <h2 class="list-title">Проєкт <span lang="en">Boxes</span></h2>
-                <p class="work-types">Додаток</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/boxes.jpg"
+                    alt="Коробки"
+                    width="370"
+                  />
+                  <h2 class="list-title">
+                    Проєкт <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="work-types">Додаток</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img src="./images/monitor.jpg" alt="Монитор" width="370" />
-                <h2 class="list-title" lang="en">Inspiration has no Borders</h2>
-                <p class="work-types">Веб-сайт</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/monitor.jpg"
+                    alt="Монитор"
+                    width="370"
+                  />
+                  <h2 class="list-title" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="work-types">Веб-сайт</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img src="./images/magazine.jpg" alt="Журнал" width="370" />
-                <h2 class="list-title">
-                  Видання <span lang="en">Limited Edition has no Borders</span>
-                </h2>
-                <p class="work-types">Дизайн</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/magazine.jpg"
+                    alt="Журнал"
+                    width="370"
+                  />
+                  <h2 class="list-title">
+                    Видання
+                    <span lang="en">Limited Edition has no Borders</span>
+                  </h2>
+                  <p class="work-types">Дизайн</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img src="./images/label.jpg" alt="Бирка" width="370" />
-                <h2 class="list-title">Проєкт <span lang="en">LAB</span></h2>
-                <p class="work-types">Маркетинг</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/label.jpg"
+                    alt="Бирка"
+                    width="370"
+                  />
+                  <h2 class="list-title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="work-types">Маркетинг</p>
+                </a>
+              </div>
             </li>
             <li>
-              <a class="services" href="#">
-                <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
-                <h2 class="list-title" lang="en">Growing Business</h2>
-                <p class="work-types">Додаток</p>
-              </a>
+              <div class="cart">
+                <a class="services" href="#">
+                  <img
+                    class="service-photo"
+                    src="./images/notebook.jpg"
+                    alt="Ноутбук"
+                    width="370"
+                  />
+                  <h2 class="list-title" lang="en">Growing Business</h2>
+                  <p class="work-types">Додаток</p>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
