--- a/index.html
+++ b/index.html
@@ -27,18 +27,22 @@
         </div>
         <nav>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студіо</a></li>
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li><a href="#" class="link">Контакти</a></li>
+            <li class="item">
+              <a href="./index.html" class="link current">Студіо</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфоліо</a>
+            </li>
+            <li class="item"><a href="#" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
-          <li>
+          <li class="item">
             <a lang="en" href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
