--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для<br />вашого бізнесу</h1>
           <button class="button-hero pointer" type="button">
             Замовити послугу
           </button>
@@ -61,27 +61,27 @@
         <div class="container">
           <h2 class="section-title visually-hidden">Наші переваги</h2>
           <ul class="benefits-list list">
-            <li>
+            <li class="item">
               <h3 class="title">Увага до деталей</h3>
               <p class="description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальність</h3>
               <p class="description">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планування</h3>
               <p class="description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Сучаснітехнології</h3>
               <p class="description">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -94,22 +94,22 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="list">
-            <li>
+          <ul class="we-do list">
+            <li class="img">
               <img
                 src="./images/display-keyboard.jpg"
                 alt="Набір тексту на клавіатурі"
                 width="370"
               />
             </li>
-            <li>
+            <li class="img">
               <img
                 src="./images/smart-interface.jpg"
                 alt="Смартфон"
                 width="370"
               />
             </li>
-            <li>
+            <li class="img">
               <img
                 src="./images/color-table.jpg"
                 alt="Таблиця кольорів"
@@ -123,17 +123,19 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="staff-list list">
-            <li>
+            <li class="item">
               <img
                 class="photo"
                 src="./images/igor.jpg"
                 alt="Ігор Дем'яненко"
                 width="270"
               />
-              <h3 class="name">Ігор Дем'яненко</h3>
-              <p class="profession" lang="en">Product Designer</p>
+              <div class="info">
+                <h3 class="name">Ігор Дем'яненко</h3>
+                <p class="profession" lang="en">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 class="photo"
                 class="photo"
@@ -141,28 +143,34 @@
                 alt="Ольга Рєпіна"
                 width="270"
               />
-              <h3 class="name">Ольга Рєпіна</h3>
-              <p class="profession" lang="en">Frontend Developer</p>
+              <div class="info">
+                <h3 class="name">Ольга Рєпіна</h3>
+                <p class="profession" lang="en">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 class="photo"
                 src="./images/mykola.jpg"
                 alt="Микола Тарасов"
                 width="270"
               />
-              <h3 class="name">Микола Тарасов</h3>
-              <p class="profession" lang="en">Marketing</p>
+              <div class="info">
+                <h3 class="name">Микола Тарасов</h3>
+                <p class="profession" lang="en">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 class="photo"
                 src="./images/mykhaylo.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
               />
-              <h3 class="name">Михайло Єрмаков</h3>
-              <p class="profession" lang="en">UI Designer</p>
+              <div class="info">
+                <h3 class="name">Михайло Єрмаков</h3>
+                <p class="profession" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -178,7 +186,7 @@
 
         <address>
           <ul class="basement list">
-            <li>
+            <li class="item">
               <a
                 class="map link"
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
@@ -187,7 +195,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a
                 class="contacts-basement link"
                 lang="en"
