--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
       </section>
     </main>
-    <footer class="basement">
+    <footer class="footer">
       <div class="container">
         <div>
           <a lang="en" href="./index.html" class="logo second"
