--- a/portfolio.html
+++ b/portfolio.html
@@ -27,20 +27,20 @@
         </div>
         <nav>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студіо</a></li>
-            <li>
+            <li class="item"><a href="./index.html" class="link">Студіо</a></li>
+            <li class="item">
               <a href="./portfolio.html" class="link current">Портфоліо</a>
             </li>
-            <li><a href="#" class="link">Контакти</a></li>
+            <li class="item"><a href="#" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
-          <li>
+          <li class="item">
             <a lang="en" href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
