--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@
       </section>
     </main>
 
-    <footer class="basement">
+    <footer class="footer">
       <div class="container">
         <div>
           <a lang="en" href="./index.html" class="logo second"
@@ -225,7 +225,7 @@
 
         <address>
           <ul class="basement list">
-            <li>
+            <li class="item">
               <a
                 class="map link"
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
@@ -234,7 +234,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a
                 class="contacts-basement link"
                 lang="en"
