--- a/portfolio.html
+++ b/portfolio.html
@@ -51,26 +51,26 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Перелік послуг</h1>
-          <ul class="list">
-            <li>
+          <ul class="buttons list">
+            <li class="item">
               <button class="button-all pointer" type="button">Усі</button>
             </li>
-            <li>
+            <li class="item">
               <button class="button pointer" type="button">Веб-сайти</button>
             </li>
-            <li>
+            <li class="item">
               <button class="button pointer" type="button">Додатки</button>
             </li>
-            <li>
+            <li class="item">
               <button class="button pointer" type="button">Дизайн</button>
             </li>
-            <li>
+            <li class="item">
               <button class="button pointer" type="button">Маркетинг</button>
             </li>
           </ul>
 
-          <ul class="list">
-            <li>
+          <ul class="service-list list">
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -84,7 +84,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -101,7 +101,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -117,7 +117,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -133,7 +133,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -149,7 +149,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -165,7 +165,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -176,13 +176,13 @@
                   />
                   <h2 class="list-title">
                     Видання
-                    <span lang="en">Limited Edition has no Borders</span>
+                    <span lang="en">Limited Edition</span>
                   </h2>
                   <p class="work-types">Дизайн</p>
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
@@ -196,7 +196,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
                   <img
