рамки в карточках только снизу

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </p>
             </li>
             <li class="item">
-              <h3 class="title">Сучаснітехнології</h3>
+              <h3 class="title">Сучасні технології</h3>
               <p class="description">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -91,7 +91,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="we-do section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="we-do list">
