--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,12 @@
                     alt="Картки персоналу"
                     width="370"
                   />
-                  <h2 class="list-title">Технокряк</h2>
-                  <p class="work-types">Веб-сайт</p>
+                  <ul class="cart-info list">
+                    <li class="info">
+                      <h2 class="list-title">Технокряк</h2>
+                    </li>
+                    <li class="info"><p class="work-types">Веб-сайт</p></li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -93,14 +97,17 @@
                     alt="Баскетбол"
                     width="370"
                   />
-                  <h2 class="list-title">
-                    Постер<span lang="en"></span> New Orlean vs Golden Star
-                  </h2>
-                  <p class="work-types">Дизайн</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Постер<span lang="en"></span> New Orlean vs Golden Star
+                      </h2>
+                    </li>
+                    <li><p class="work-types">Дизайн</p></li>
+                  </ul>
                 </a>
               </div>
             </li>
-
             <li class="service-item">
               <div class="cart">
                 <a class="services" href="#">
@@ -110,10 +117,16 @@
                     alt="Риба"
                     width="370"
                   />
-                  <h2 class="list-title">
-                    Ресторан <span lang="en">Seafood</span>
-                  </h2>
-                  <p class="work-types">Додаток</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Ресторан <span lang="en">Seafood</span>
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Додаток</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -126,10 +139,16 @@
                     alt="Навушники"
                     width="370"
                   />
-                  <h2 class="list-title">
-                    Проєкт <span lang="en">Prime</span>
-                  </h2>
-                  <p class="work-types">Маркетинг</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Проєкт <span lang="en">Prime</span>
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Маркетинг</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -142,10 +161,16 @@
                     alt="Коробки"
                     width="370"
                   />
-                  <h2 class="list-title">
-                    Проєкт <span lang="en">Boxes</span>
-                  </h2>
-                  <p class="work-types">Додаток</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Проєкт <span lang="en">Boxes</span>
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Додаток</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -158,10 +183,16 @@
                     alt="Монитор"
                     width="370"
                   />
-                  <h2 class="list-title" lang="en">
-                    Inspiration has no Borders
-                  </h2>
-                  <p class="work-types">Веб-сайт</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title" lang="en">
+                        Inspiration has no Borders
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Веб-сайт</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -174,11 +205,17 @@
                     alt="Журнал"
                     width="370"
                   />
-                  <h2 class="list-title">
-                    Видання
-                    <span lang="en">Limited Edition</span>
-                  </h2>
-                  <p class="work-types">Дизайн</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Видання
+                        <span lang="en">Limited Edition</span>
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Дизайн</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -191,8 +228,16 @@
                     alt="Бирка"
                     width="370"
                   />
-                  <h2 class="list-title">Проєкт <span lang="en">LAB</span></h2>
-                  <p class="work-types">Маркетинг</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title">
+                        Проєкт <span lang="en">LAB</span>
+                      </h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Маркетинг</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
@@ -205,8 +250,14 @@
                     alt="Ноутбук"
                     width="370"
                   />
-                  <h2 class="list-title" lang="en">Growing Business</h2>
-                  <p class="work-types">Додаток</p>
+                  <ul class="cart-info list">
+                    <li>
+                      <h2 class="list-title" lang="en">Growing Business</h2>
+                    </li>
+                    <li>
+                      <p class="work-types">Додаток</p>
+                    </li>
+                  </ul>
                 </a>
               </div>
             </li>
