закончил маржины в карточках

--- a/portfolio.html
+++ b/portfolio.html
@@ -251,10 +251,10 @@
                     width="370"
                   />
                   <ul class="cart-info list">
-                    <li>
+                    <li class="info">
                       <h2 class="list-title" lang="en">Growing Business</h2>
                     </li>
-                    <li>
+                    <li class="info">
                       <p class="work-types">Додаток</p>
                     </li>
                   </ul>
