hero-title перевел на width 696px

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для<br />вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button-hero pointer" type="button">
             Замовити послугу
           </button>
